--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-langchain
-openai
+langchain==0.0.140
+openai==0.27.0
+langchain-community
 python-dotenv
 requests
-googlesearch.py
-duckduckgo-search
+googlesearch-python
+duckduckgo-search==0.3
 beautifulsoup4
 rich
